# RUST-TEST

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  VPS_COMMANDES.md  build_output.txt  config.yaml  merge_files.txt  merge_files_utf8.txt  test_axe10.txt  test_axe8.txt  test_axe8b.txt  test_axe9.txt  test_order_output.txt  test_out.txt  test_output.txt  test_result.txt
.agent/workflows/: vps-config.md  vps-connect.md  vps-launch.md  vps-resume.md  vps-stop.md  vps-update.md
.claude/: settings.local.json
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 0-1-suppression-pattern-scout.md  0-2-suppression-code-v3-residuel.md  0-3-validation-structure-modulaire.md  1-1-connexion-websocket-vest.md  1-2-connexion-websocket-paradex.md  1-3-reception-parsing-orderbooks.md  1-4-calcul-spread-entry-exit.md  1-5-detection-depassement-seuil.md  2-1-placement-ordre-long.md  2-3-execution-delta-neutral-simultanee.md  sprint-status.yaml  (+43 more)
bot/: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build_output.txt  build_release.txt  check_output.txt  config.yaml  debug_output.txt  errors_grouped.txt  final_status.txt  old_runtime.txt  parse_log.ps1  raw_msgs.txt  reader_msgs.txt  results4.txt  results5.txt  status.txt  status2.txt  status3.txt  status4.txt  sub_status.txt  test_output.txt  test_output_axe7.txt  test_output_axe7b.txt  test_output_axe7c.txt
bot/benches/: spread_bench.rs
bot/lighter-crypto/crypto/: Cargo.toml
bot/lighter-crypto/poseidon-hash/: Cargo.toml
bot/lighter-crypto/signer/: Cargo.toml
bot/lighter-crypto/signer/src/: lib.rs
bot/src/: bin_utils.rs  error.rs  lib.rs  main.rs
bot/src/adapters/: errors.rs  factory.rs  manager.rs  mod.rs  test_utils.rs  traits.rs  types.rs
bot/src/adapters/dydx/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/ethereal/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/extended/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/grvt/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/hotstuff/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/hyperliquid/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/lighter/: adapter.rs  config.rs  mod.rs  signing.rs  types.rs
bot/src/adapters/nado/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/nord/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/pacifica/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/paradex/: adapter.rs  config.rs  mod.rs  signing.rs  types.rs
bot/src/adapters/reya/: adapter.rs  config.rs  mod.rs  types.rs
bot/src/adapters/shared/: mod.rs  reconnect.rs  websocket.rs
bot/src/adapters/vest/: adapter.rs  config.rs  mod.rs  signing.rs  types.rs
bot/src/config/: constants.rs  loader.rs  logging.rs  mod.rs  types.rs
bot/src/core/: aggregator.rs  channels.rs  detector.rs  events.rs  execution.rs  mod.rs  monitoring.rs  pyth.rs  runtime.rs  scaling.rs  spread.rs  types.rs
bot/src/server/: mod.rs  ws.rs
bot/src/tui/: app.rs  event.rs  logging.rs  mod.rs  ui.rs
bot/tests/: full_cycle.rs  test_fills.rs
docs/: api-contracts.md  architecture.md  data-models.md  index.md  lighter_api_reference.md  project-scan-report.json  source-tree.md
frontend/: package-lock.json  package.json
src/: error.rs  lib.rs  main.rs
tests/: full_cycle.rs  test_fills.rs
(+67 files in other folders)
