[package]
name = "hft_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto (Exchange Authentication)
ethers = "2.0"
starknet-crypto = "0.6"
hex = "0.4"
sha3 = "0.10"
primitive-types = "0.12"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
native-tls = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Config
dotenvy = "0.15"

# UUID for clientOrderId
uuid = { version = "1", features = ["v4", "v7"] }

# For Starknet signing
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10"
starknet-signers = "0.14"
starknet-core = "0.16"

# For EIP-712 signing (L1 onboarding)
alloy-primitives = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-sol-types = "0.8"

# Utilities
rust_decimal = "1.36"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"  # CR-1 fix: Forces sequential execution of env-dependent tests
