[package]
name = "hft_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
native-tls = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Config
dotenvy = "0.15"

# HTTP/WS Server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[[bench]]
name = "spread_bench"
harness = false
