[package]
name = "goldilocks-crypto"
version = "0.1.1"
edition = "2021"
description = "ECgFp5 elliptic curve and Schnorr signatures over Goldilocks field (vendored from lighter-rust)"

[dependencies]
poseidon-hash = { path = "../poseidon-hash" }
hex = "0.4"
thiserror = "1.0"
rand = "0.8"
num-bigint = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
poseidon-hash = { path = "../poseidon-hash" }
