[package]
name = "lighter-signer"
version = "0.1.0"
edition = "2021"
description = "Lighter Protocol signer - KeyManager for Schnorr/Poseidon2 signing (vendored from lighter-rust)"

[dependencies]
goldilocks-crypto = { path = "../crypto" }
poseidon-hash = { path = "../poseidon-hash" }
hex = "0.4"
thiserror = "1.0"
